NIFI-14274 Removed Client Auth from MongoDB Client Service
Signed-off-by: Pierre Villard <pierre.villard.fr@gmail.com>

This closes #9725.