@@ -34,12 +34,12 @@ import org.apache.nifi.components.PropertyDescriptor;
 import org.apache.nifi.controller.AbstractControllerService;
 import org.apache.nifi.controller.ConfigurationContext;
 import org.apache.nifi.logging.ComponentLog;
+import org.apache.nifi.migration.PropertyConfiguration;
 import org.apache.nifi.ssl.SSLContextProvider;
 import org.bson.Document;
 
 import javax.net.ssl.SSLContext;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -62,20 +62,22 @@ public class MongoDBControllerService extends AbstractControllerService implemen
         DB_USER,
         DB_PASSWORD,
         SSL_CONTEXT_SERVICE,
-        CLIENT_AUTH,
         WRITE_CONCERN
     );
 
     protected MongoClient mongoClient;
     private String writeConcernProperty;
 
+    @Override
+    public void migrateProperties(final PropertyConfiguration propertyConfiguration) {
+        propertyConfiguration.removeProperty("ssl-client-auth");
+    }
+
     // TODO: Remove duplicate code by refactoring shared method to accept PropertyContext
     protected MongoClient createClient(ConfigurationContext context, MongoClient existing) {
         if (existing != null) {
             closeClient(existing);
         }
-
-        getLogger().info("Creating MongoClient");
 
         writeConcernProperty = context.getProperty(WRITE_CONCERN).getValue();
 
@@ -130,7 +132,7 @@ public class MongoDBControllerService extends AbstractControllerService implemen
 
     @Override
     public WriteConcern getWriteConcern() {
-        WriteConcern writeConcern = null;
+        WriteConcern writeConcern;
         switch (writeConcernProperty) {
             case WRITE_CONCERN_ACKNOWLEDGED:
                 writeConcern = WriteConcern.ACKNOWLEDGED;
@@ -209,6 +211,6 @@ public class MongoDBControllerService extends AbstractControllerService implemen
             closeClient(client);
         }
 
-        return Arrays.asList(connectionSuccessful.build());
+        return List.of(connectionSuccessful.build());
     }
 }
